--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,9 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
     "bcryptjs": "^2.4.3",
+    "mongodb": "^6.6.0",
     "react": "^18.2.0",
+    "react-app-rewired": "^2.2.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
