working property context

--- a/client/package.json
+++ b/client/package.json
@@ -2,15 +2,17 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
-  "config-overrides-path": "node_modules/react-app-rewired/config-overrides.js",
+  "config-overrides-path": "node_modules/@craco/craco/scripts/start.js",
   "dependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@thirdweb-dev/chains": "^0.1.108",
     "@thirdweb-dev/react": "^3.10.3",
     "axios": "^1.6.8",
     "bcryptjs": "^2.4.3",
+    "browserify-zlib": "^0.2.0",
     "buffer": "^6.0.3",
     "craco": "^0.0.3",
     "ethers": "^5.7.2",
@@ -22,6 +24,7 @@
     "react": "^18.2.0",
     "react-app-rewired": "^2.2.1",
     "react-dom": "^18.2.0",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.23.0",
     "react-scripts": "^5.0.1",
     "stream": "^0.0.2",
