--- a/client/package.json
+++ b/client/package.json
@@ -36,8 +36,8 @@
   "scripts": {
     "Generate_SOURCEMAP": "false",
     "start": "craco start",
-    "build": "react-app-rewired build",
-    "test": "react-app-rewired test",
+    "build": "craco build",
+    "test": "craco test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
